--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <div class="container">
                     <div class="row g-0">
                         <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                            <a href="assets/img/nature/image5.jpg">
-                                <img class="img-fluid image" src="assets/img/nature/image5.jpg">
+                            <a href="http://hachemawawi.me/business-card/">
+                                <img class="img-fluid image" src="assets/img/bscard.PNG">
                             </a>
                         </div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover">
