--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <div class="avatar" style="background: url(&quot;assets/img/avatars/mypic.png&quot;) center / contain no-repeat, var(--bs-primary);box-shadow: 0px 0px 0px;"></div>
                     <div class="about-me">
                         <p>
-                            Hello! I am
+                            Hi! I' m
                             <strong>Hachem Awawi</strong>
-                            . I work as a Front-end developer and&nbsp;photographer. I am passionate about designing and developing websites that let users have the best experience.
+                            . I work as a Front-end developer and&nbsp;photographer. I' m passionate about designing and developing websites that let users have the best experience.
                         </p>
                         <a class="btn btn-outline-primary" role="button" href="hire-me.html">Hire me</a>
                     </div>
@@ -57,17 +57,17 @@
                     <div class="row g-0">
                         <div class="col-md-6 col-lg-4 item zoom-on-hover">
                             <a href="http://hachemawawi.me/business-card/">
-                                <img class="img-fluid image" src="assets/img/bscard.PNG">
+                                <img class="img-fluid image" src="assets/img/bcard.PNG">
                             </a>
                         </div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                            <a href="assets/img/nature/image2.jpg">
-                                <img class="img-fluid image" src="assets/img/nature/image2.jpg">
+                            <a href="assets/img/E-Business Gate.jpg">
+                                <img class="img-fluid image" src="assets/img/E-Business Gate.jpg">
                             </a>
                         </div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                            <a href="assets/img/tech/image4.jpg">
-                                <img class="img-fluid image" src="assets/img/tech/image4.jpg">
+                            <a href="assets/img/chatpng.PNG">
+                                <img class="img-fluid image" src="assets/img/chatpng.PNG">
                             </a>
                         </div>
                     </div>
