--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-12 col-lg-5 offset-lg-1 text">
-                        <h3>Website Project</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efr nunc, vivamus vel accumsan dui. Quisque ac dolor cursus, volutpat nisl vel, porttitor eros.</p>
+                        <h3>BeeHR LMS</h3>
+                        <p> A Full-stack Next.js LMS application that manages work leaves.</p>
                     </div>
                     <div class="col-md-12 col-lg-5">
                         <div class="portfolio-laptop-mockup">
                             <div class="screen">
-                                <div class="screen-content" style="background-image: url(&quot;assets/img/tech/image6.png&quot;);"></div>
+                                <div class="screen-content" style="background-image: url(&quot;assets/img/tech/beehr.png&quot;);"></div>
                             </div>
                             <div class="keyboard"></div>
                         </div>
