--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="col-md-12 col-lg-5">
                         <div class="portfolio-laptop-mockup">
                             <div class="screen">
-                                <div class="screen-content" style="background-image: url(&quot;assets/img/tech/dashboard.PNG&quot;);"></div>
+                                <div class="screen-content" style="background-image: url(&quot;assets/img/tech/beehr.jpg&quot;);"></div>
                             </div>
                             <div class="keyboard"></div>
                         </div>
