--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 </div>
                                 <div class="card-body">
                                     <h3 class="card-title">Web Design</h3>
-                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                    <p class="card-text">As a visual thinker, I approach web design with a focus on clarity, flow, and user experience. I love bringing layouts to life—balancing form and function to create interfaces that are both intuitive and visually engaging. Every element I design is guided by the goal of making digital experiences feel seamless and human.</p>
                                 </div>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                                 </div>
                                 <div class="card-body">
                                     <h3 class="card-title">Graphic Design</h3>
-                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                    <p class="card-text">I'm a highly visual person who thrives on turning ideas into compelling visuals. For me, design is more than aesthetics—it's a way to communicate, tell stories, and make experiences memorable. I enjoy crafting clean, bold visuals that not only look good but also serve a purpose.</p>
                                 </div>
                             </div>
                         </div>
@@ -118,7 +118,7 @@
                                 </div>
                                 <div class="card-body">
                                     <h3 class="card-title">Photography</h3>
-                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                    <p class="card-text">Photography is my way of seeing the world—through light, composition, and emotion. As a visual person, I’m drawn to capturing moments that tell a story without words. Whether it's a candid street scene or a carefully composed portrait, I aim to create images that connect and resonate.</p>
                                 </div>
                             </div>
                         </div>
