--- a/cv.html
+++ b/cv.html
@@ -45,11 +45,19 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects-grid-cards.html">Projects</a></li>
-                <li class="nav-item"><a class="nav-link active" href="cv.html">CV</a></li>
-                <li class="nav-item"><a class="nav-link" href="hire-me.html">Hire me</a></li>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="projects-grid-cards.html">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="cv.html">CV</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="hire-me.html">Hire me</a>
+                        </li>
             </ul>
         </div>
     </div>
