--- a/cv.html
+++ b/cv.html
@@ -36,25 +36,34 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white" style="background: linear-gradient(80deg, #5d17eb 0%, #0ea0ff 100%)">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">
-            <img src="assets/img/ha.png" alt="Logo" width="50" height="40">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects-grid-cards.html">Projects</a></li>
-                <li class="nav-item"><a class="nav-link active" href="cv.html">CV</a></li>
-                <li class="nav-item"><a class="nav-link" href="hire-me.html">Hire me</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<main class="page cv-page">
+<nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient" style="background: linear-gradient(80deg, #5d17eb 0%, #0ea0ff 100%);">
+            <div class="container">
+                <a href="index.html">
+                    <img src="assets/img/ha.png" width="50" height="40">
+                </a>
+                <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav">
+                    <span class="visually-hidden">Toggle navigation</span>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="projects-grid-cards.html">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="cv.html">CV</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="hire-me.html">Hire me</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+<main class="cv-page">
     <section class="portfolio-block block-intro border-bottom">
         <div class="container text-center">
             <img src="assets/img/avatars/mypic.png" alt="Hachem Awawi" class="rounded-circle" width="120">
