--- a/cv.html
+++ b/cv.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </nav>
-<main class="cv-page">
+<main class="page cv-page">
     <section class="portfolio-block block-intro border-bottom">
         <div class="container text-center">
             <img src="assets/img/avatars/mypic.png" alt="Hachem Awawi" class="rounded-circle" width="120">
