--- a/index.html
+++ b/index.html
@@ -52,27 +52,83 @@
                     </div>
                 </div>
             </section>
-            <section class="portfolio-block photography">
-                <div class="container">
-                    <div class="row g-0">
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                            <a href="assets/img/nature/image5.jpg">
-                                <img class="img-fluid image" src="assets/img/nature/image5.jpg">
-                            </a>
+           <section class="portfolio-block photography">
+    <div class="container">
+        <div class="row g-0">
+
+            <!-- Carousel 1 -->
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/img/nature/image5.jpg" class="d-block w-100 img-fluid image" alt="...">
                         </div>
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                            <a href="assets/img/nature/image2.jpg">
-                                <img class="img-fluid image" src="assets/img/nature/image2.jpg">
-                            </a>
+                        <div class="carousel-item">
+                            <img src="assets/img/nature/image6.jpg" class="d-block w-100 img-fluid image" alt="...">
                         </div>
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                            <a href="assets/img/tech/image4.jpg">
-                                <img class="img-fluid image" src="assets/img/tech/image4.jpg">
-                            </a>
+                        <div class="carousel-item">
+                            <img src="assets/img/nature/image7.jpg" class="d-block w-100 img-fluid image" alt="...">
                         </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </button>
                 </div>
-            </section>
+            </div>
+
+            <!-- Carousel 2 -->
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/img/nature/image2.jpg" class="d-block w-100 img-fluid image" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/nature/image3.jpg" class="d-block w-100 img-fluid image" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/nature/image4.jpg" class="d-block w-100 img-fluid image" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Carousel 3 -->
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <div id="carousel3" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/img/tech/image4.jpg" class="d-block w-100 img-fluid image" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/tech/image5.jpg" class="d-block w-100 img-fluid image" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/tech/image6.jpg" class="d-block w-100 img-fluid image" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
             <section class="portfolio-block call-to-action border-bottom">
                 <div class="container">
                     <div class="d-flex justify-content-center align-items-center content">
