--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                 <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/nature/image5.jpg" class="d-block w-100 img-fluid image" alt="...">
+                            <img src="assets/img/food-saver-app.PNG" class="d-block w-100 img-fluid image" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/nature/image6.jpg" class="d-block w-100 img-fluid image" alt="...">
+                            <img src="assets/img/fs2.PNG" class="d-block w-100 img-fluid image" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/nature/image7.jpg" class="d-block w-100 img-fluid image" alt="...">
+                            <img src="assets/img/fs3.PNG" class="d-block w-100 img-fluid image" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
