--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                 <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/nature/image2.jpg" class="d-block w-100 img-fluid image" alt="...">
+                            <img src="assets/img/quote-cards.PNG" class="d-block w-100 img-fluid image" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/nature/image3.jpg" class="d-block w-100 img-fluid image" alt="...">
+                            <img src="assets/img/qc1.PNG" class="d-block w-100 img-fluid image" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/nature/image4.jpg" class="d-block w-100 img-fluid image" alt="...">
+                            <img src="assets/img/qc2.PNG" class="d-block w-100 img-fluid image" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
