--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                 <div id="carousel3" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/tech/image4.jpg" class="d-block w-100 img-fluid image" alt="...">
+                            <img src="assets/img/dashboard.PNG" class="d-block w-100 img-fluid image" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/tech/image5.jpg" class="d-block w-100 img-fluid image" alt="...">
+                            <img src="assets/img/dashboard.PNG" class="d-block w-100 img-fluid image" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/tech/image6.jpg" class="d-block w-100 img-fluid image" alt="...">
+                            <img src="assets/img/dashboard.PNG" class="d-block w-100 img-fluid image" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
