--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="row g-0">
 
             <!-- Carousel 1 -->
-            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+            <div class="col-md-6 col-lg-4 item">
                 <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -80,7 +80,7 @@
             </div>
 
             <!-- Carousel 2 -->
-            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+            <div class="col-md-6 col-lg-4 item ">
                 <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -103,7 +103,7 @@
             </div>
 
             <!-- Carousel 3 -->
-            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+            <div class="col-md-6 col-lg-4 item ">
                 <div id="carousel3" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
