--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
            <section class="portfolio-block photography">
     <div class="container">
         <div class="row g-0">
+            
+    <style>
+.carousel {
+    height: 300px; /* or any consistent value like 350px */
+    overflow: hidden;
+}
+
+.carousel .carousel-item img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+</style>
 
             <!-- Carousel 1 -->
             <div class="col-md-6 col-lg-4 item">
