--- a/cv.html
+++ b/cv.html
@@ -68,7 +68,7 @@
         <div class="container text-center">
             <img src="assets/img/avatars/mypic.png" alt="Hachem Awawi" class="rounded-circle" width="120">
             <h1 class="mt-3">Hachem Awawi</h1>
-            <h4 class="text-muted">AI Web Developer</h4>
+            <h4 class="text-muted">Creative Web Developer</h4>
             <p>Creative Developer with a Computer Science background, currently pursuing a Master’s in Networks and Distributed Systems (Year 1). Passionate about AI engineering and building multi-agent systems that collaborate and adapt in distributed environments.</p>
             <a class="btn btn-outline-primary" href="#">Hire Me</a>
         </div>
