--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <div class="avatar" style="background: url(&quot;assets/img/avatars/mypic.png&quot;) center / contain no-repeat, var(--bs-primary);box-shadow: 0px 0px 0px;"></div>
                     <div class="about-me">
                         <p>
-                            Hello! I am
+                            Hello! I'm
                             <strong>Hachem Awawi</strong>
-                            . I work as a Front-end developer and&nbsp;photographer. I am passionate about designing and developing websites that let users have the best experience.
+                            . A Creative Web Developer and&nbsp;Designer. I'm passionate about designing and developing websites that let users have the best experience.
                         </p>
                         <a class="btn btn-outline-primary" role="button" href="hire-me.html">Hire me</a>
                     </div>
