--- a/cv.html
+++ b/cv.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hachem Awawi - CV</title>
-    <link rel="icon" type="image/png" href="assets/img/ha.png">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
-    <style>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hachem Awawi - CV</title>
+        <link rel="icon" type="image/png" href="assets/img/ha.png">
+        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap">
+        <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+        <link rel="stylesheet" href="assets/css/styles.min.css">
+        <style>
         .hobbies-section {
             padding: 60px 0;
             background-color: #f9f9f9;
@@ -33,10 +33,10 @@
             margin-right: 15px;
             color: #5d17eb;
         }
-    </style>
-</head>
-<body>
-<nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient" style="background: linear-gradient(80deg, #5d17eb 0%, #0ea0ff 100%);">
+        </style>
+    </head>
+    <body>
+        <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient" style="background: linear-gradient(80deg, #5d17eb 0%, #0ea0ff 100%);">
             <div class="container">
                 <a href="index.html">
                     <img src="assets/img/ha.png" width="50" height="40">
@@ -63,91 +63,139 @@
                 </div>
             </div>
         </nav>
-<main class="page cv-page">
-    <section class="portfolio-block block-intro border-bottom">
-        <div class="container text-center">
-            <img src="assets/img/avatars/mypic.png" alt="Hachem Awawi" class="rounded-circle" width="120">
-            <h1 class="mt-3">Hachem Awawi</h1>
-            <h4 class="text-muted">Creative Web Developer</h4>
-            <p>Creative Developer with a Computer Science background, currently pursuing a Master’s in Networks and Distributed Systems (Year 1). Passionate about AI engineering and building multi-agent systems that collaborate and adapt in distributed environments.</p>
-            <a class="btn btn-outline-primary" href="#">Hire Me</a>
-        </div>
-    </section>
-    <section class="portfolio-block cv">
-        <div class="container">
-            <div class="group">
-                <h2 class="text-center">Education</h2>
-                <div class="item">
-                    <h3>Master's in Networks & Distributed Applications</h3>
-                    <p class="text-muted">Institut Supérieur d'Informatique et de Gestion de Kairouan — Graduation: July 2026</p>
+        <main class="page cv-page">
+            <section class="portfolio-block block-intro border-bottom">
+                <div class="container text-center">
+                    <img
+                        src="assets/img/avatars/mypic.png"
+                        alt="Hachem Awawi"
+                        class="rounded-circle"
+                        width="120"
+                    >
+                    <h1 class="mt-3">Hachem Awawi</h1>
+                    <h4 class="text-muted">Creative Web Developer</h4>
+                    <p>
+                        3D Web Enthusiast with a Computer Science background, I've completed (Year 1 of 2) of a \\ Master’s in Networks and Distributed Systems.
+                        I’m passionate about crafting pixel-perfect, user-centric interfaces. I apply UI/UX principles to develop ergonomic digital solutions, with a growing focus on enhancing e-commerce through WebAR marketing and interactive 3D Web Configurators.
+                    </p>
+                    <a class="btn btn-outline-primary" href="#">Hire Me</a>
                 </div>
-                <div class="item">
-                    <h3>Bachelor's in Computer Science</h3>
-                    <p class="text-muted">ISIGK — 2021 - 2024</p>
+            </section>
+            <section class="portfolio-block cv">
+                <div class="container">
+                    <div class="group">
+                        <h2 class="text-center">Education</h2>
+                        <div class="item">
+                            <h3>Master's in Networks & Distributed Applications</h3>
+                            <p class="text-muted">Institut Supérieur d'Informatique et de Gestion de Kairouan — Graduation: July 2026</p>
+                        </div>
+                        <div class="item">
+                            <h3>Bachelor's in Computer Science</h3>
+                            <p class="text-muted">ISIGK — 2021 - 2024</p>
+                        </div>
+                    </div>
+                    <div class="group">
+                        <h2 class="text-center">References</h2>
+                        <ul>
+                            <li>
+                                <a href="https://drive.google.com/file/d/18jh3c23Oy6L1lN31hjefyiXwgckLOdbK/view">Working with HuggingFace</a>
+                            </li>
+                            <li>
+                                <a href="https://huggingface.co/spaces/harshera/First_agent_template">Agent App Example</a>
+                            </li>
+                            <li>
+                                <a href="https://drive.google.com/file/d/1xp3ZWzv7B8K-fmQv-ygFQRrAHqVz2hqF/view">Introduction to Git</a>
+                            </li>
+                            <li>
+                                <a href="https://drive.google.com/file/d/1MJ8MiCaOBu31tt6YyiGSja3M7kvGeW5I/view">Foundations of UX Design</a>
+                            </li>
+                            <li>
+                                <a href="https://drive.google.com/file/d/19w_8orsKJLh3lXnH-9VZcQLozOxKZq73/view">Intro to Front-End Development</a>
+                            </li>
+                            <li>
+                                <a href="https://drive.google.com/file/d/12sdazm-uXFwIn33vC25SuL3hU6hzUKe9/view">Programming with JavaScript</a>
+                            </li>
+                            <li>
+                                <a href="https://drive.google.com/file/d/11-nBACHXZlkIWDKY-y5Qh7QcMCIEJ-Pj/view">Digital Marketing Fundamentals</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="group hobbies-section">
+                        <h2 class="text-center">🎯 Hobbies & Interests</h2>
+                        <div class="row">
+                            <div class="col-md-6 hobby-item">
+                                <div>
+                                    <span class="hobby-icon">🧠</span>
+                                    <strong>Psychology & Personal Growth:</strong> Passionate about human behavior, mindset mastery, and emotional intelligence.
+                                </div>
+                            </div>
+                            <div class="col-md-6 hobby-item">
+                                <div>
+                                    <span class="hobby-icon">🎨</span>
+                                    <strong>Visual Arts & Design:</strong> Love crafting engaging UI/UX, visual storytelling, and motion design.
+                                </div>
+                            </div>
+                            <div class="col-md-6 hobby-item">
+                                <div>
+                                    <span class="hobby-icon">🕹️</span>
+                                    <strong>Experimental Technologies:</strong> Exploring WebAR, AI agents, and the frontier of immersive tech.
+                                </div>
+                            </div>
+                            <div class="col-md-6 hobby-item">
+                                <div>
+                                    <span class="hobby-icon">🧘</span>
+                                    <strong>Mindfulness & Focus:</strong> Practicing self-discipline, deep work, and mental clarity.
+                                </div>
+                            </div>
+                            <div class="col-md-6 hobby-item">
+                                <div>
+                                    <span class="hobby-icon">📚</span>
+                                    <strong>Reading & Storytelling:</strong> Enjoy non-fiction, sci-fi, and crafting narratives with impact.
+                                </div>
+                            </div>
+                            <div class="col-md-6 hobby-item">
+                                <div>
+                                    <span class="hobby-icon">🌍</span>
+                                    <strong>Cultural Exploration:</strong> Bridging modern tech with historical roots through design and code.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="group">
+                        <h2 class="text-center">Contact</h2>
+                        <p class="text-center">hachemawawi@gmail.com | (+216) 54 646 554</p>
+                        <p class="text-center">
+                            <a href="https://www.linkedin.com/in/hachem-awawi-2786a0184">LinkedIn</a>
+                            |
+                            <a href="http://hachemawawi.me/portfolio/">Portfolio</a>
+                            |
+                            <a href="https://github.com/hachemawawi">GitHub</a>
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer class="page-footer">
+            <div class="container">
+                <div class="links">
+                    <a href="#">About Me</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Projects</a>
+                </div>
+                <div class="social-icons">
+                    <a href="#">
+                        <i class="icon ion-social-facebook"></i>
+                    </a>
+                    <a href="#">
+                        <i class="icon ion-social-instagram-outline"></i>
+                    </a>
+                    <a href="#">
+                        <i class="icon ion-social-twitter"></i>
+                    </a>
                 </div>
             </div>
-            <div class="group">
-                <h2 class="text-center">References</h2>
-                <ul>
-                    <li><a href="https://drive.google.com/file/d/18jh3c23Oy6L1lN31hjefyiXwgckLOdbK/view">Working with HuggingFace</a></li>
-                    <li><a href="https://huggingface.co/spaces/harshera/First_agent_template">Agent App Example</a></li>
-                    <li><a href="https://drive.google.com/file/d/1xp3ZWzv7B8K-fmQv-ygFQRrAHqVz2hqF/view">Introduction to Git</a></li>
-                    <li><a href="https://drive.google.com/file/d/1MJ8MiCaOBu31tt6YyiGSja3M7kvGeW5I/view">Foundations of UX Design</a></li>
-                    <li><a href="https://drive.google.com/file/d/19w_8orsKJLh3lXnH-9VZcQLozOxKZq73/view">Intro to Front-End Development</a></li>
-                    <li><a href="https://drive.google.com/file/d/12sdazm-uXFwIn33vC25SuL3hU6hzUKe9/view">Programming with JavaScript</a></li>
-                    <li><a href="https://drive.google.com/file/d/11-nBACHXZlkIWDKY-y5Qh7QcMCIEJ-Pj/view">Digital Marketing Fundamentals</a></li>
-                </ul>
-            </div>
-            <div class="group hobbies-section">
-                <h2 class="text-center">🎯 Hobbies & Interests</h2>
-                <div class="row">
-                    <div class="col-md-6 hobby-item">
-                        <div><span class="hobby-icon">🧠</span><strong>Psychology & Personal Growth:</strong> Passionate about human behavior, mindset mastery, and emotional intelligence.</div>
-                    </div>
-                    <div class="col-md-6 hobby-item">
-                        <div><span class="hobby-icon">🎨</span><strong>Visual Arts & Design:</strong> Love crafting engaging UI/UX, visual storytelling, and motion design.</div>
-                    </div>
-                    <div class="col-md-6 hobby-item">
-                        <div><span class="hobby-icon">🕹️</span><strong>Experimental Technologies:</strong> Exploring WebAR, AI agents, and the frontier of immersive tech.</div>
-                    </div>
-                    <div class="col-md-6 hobby-item">
-                        <div><span class="hobby-icon">🧘</span><strong>Mindfulness & Focus:</strong> Practicing self-discipline, deep work, and mental clarity.</div>
-                    </div>
-                    <div class="col-md-6 hobby-item">
-                        <div><span class="hobby-icon">📚</span><strong>Reading & Storytelling:</strong> Enjoy non-fiction, sci-fi, and crafting narratives with impact.</div>
-                    </div>
-                    <div class="col-md-6 hobby-item">
-                        <div><span class="hobby-icon">🌍</span><strong>Cultural Exploration:</strong> Bridging modern tech with historical roots through design and code.</div>
-                    </div>
-                </div>
-            </div>
-            <div class="group">
-                <h2 class="text-center">Contact</h2>
-                <p class="text-center">hachemawawi@gmail.com | (+216) 54 646 554</p>
-                <p class="text-center">
-                    <a href="https://www.linkedin.com/in/hachem-awawi-2786a0184">LinkedIn</a> | 
-                    <a href="http://hachemawawi.me/portfolio/">Portfolio</a> | 
-                    <a href="https://github.com/hachemawawi">GitHub</a>
-                </p>
-            </div>
-        </div>
-    </section>
-</main>
-<footer class="page-footer">
-    <div class="container">
-        <div class="links">
-            <a href="#">About Me</a>
-            <a href="#">Contact</a>
-            <a href="#">Projects</a>
-        </div>
-        <div class="social-icons">
-            <a href="#"><i class="icon ion-social-facebook"></i></a>
-            <a href="#"><i class="icon ion-social-instagram-outline"></i></a>
-            <a href="#"><i class="icon ion-social-twitter"></i></a>
-        </div>
-    </div>
-</footer>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/script.min.js"></script>
-</body>
+        </footer>
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="assets/js/script.min.js"></script>
+    </body>
 </html>
