--- a/cv.html
+++ b/cv.html
@@ -75,7 +75,7 @@
                     <h1 class="mt-3">Hachem Awawi</h1>
                     <h4 class="text-muted">Creative Web Developer</h4>
                     <p>
-                        3D Web Enthusiast with a Computer Science background, I've completed (Year 1 of 2) of a \\ Master’s in Networks and Distributed Systems.
+                        3D Web Enthusiast with a Computer Science background, I've completed (Year 1 of 2) of a Master’s Degree in Networks and Distributed Systems.
                         I’m passionate about crafting pixel-perfect, user-centric interfaces. I apply UI/UX principles to develop ergonomic digital solutions, with a growing focus on enhancing e-commerce through WebAR marketing and interactive 3D Web Configurators.
                     </p>
                     <a class="btn btn-outline-primary" href="#">Hire Me</a>
